TEST_PROGRAMS/VALID/eric_ditomasso/factorial.min
# compute the factorial of a number read in
# and print it

var x: int;
var y: int;

read x;
y = 1;

while x do
	y = y*x;
	x = x-1;
done

print y;
