TEST_PROGRAMS/INVALID/evan_mcilroy/invalid_five.min
var a: int;
var b: tiny_dancer;

while x do if while x do x done else while x do x done endif done

var a: it's_very_hard_to_be_creative;


